# Sim_LLM_benchmark

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  retry_main.py  test.json
configs/: config.py  config.toml
data/: Electricity_impacts.csv  Energetic_mix_Fr.csv  manufacturing_impact_summary_mtc.csv  more-than-carbon-data.csv  prompts.csv  water.csv
data/g5k/: g5k_edge.csv  mem_density.csv
measure/data/2xQRTX8000/: consommation_energie_gpu_0_2.csv  consommation_energie_gpu_0_4.csv  consommation_energie_gpu_0_8.csv  consommation_energie_gpu_1_2.csv  consommation_energie_gpu_1_4.csv  consommation_energie_gpu_1_8.csv
measure/data/L40Sx2_3600/: consommation_energie_gpu_0_1.csv  consommation_energie_gpu_0_10.csv  consommation_energie_gpu_0_100.csv  consommation_energie_gpu_1_1.csv  consommation_energie_gpu_1_10.csv  consommation_energie_gpu_1_100.csv
measure/data/Orin/: consommation_energie_jetson_2.csv  consommation_energie_jetson_4.csv  consommation_energie_jetson_8.csv
measure/data/Orin_3600/: consommation_energie_jetson_1.csv  consommation_energie_jetson_10.csv  consommation_energie_jetson_100.csv
measure/data/old/: consommation_energie_jetson_16_4.csv  consommation_energie_jetson_2_4.csv  consommation_energie_jetson_32_4.csv  consommation_energie_jetson_4_4.csv  (+2 more)
measure/scripts/: bar_impact.py  bar_impact_mtc.py  perf_show.py  perf_show_mtc.py  plot_power_ollama.py  script_start_tx.sh  script_stop_tx.sh
scripts/: Git_issue_solver.py  multi_gpu_bench.py  ollama-batch-servers.sh  water_from_mix.py
utils/: utils_file.py
